--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+   "next": "^14.0.0",
+   "react": "^18.2.0",
+   "react-dom": "^18.2.0"
     "colorthief": "^2.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -21,6 +24,9 @@
     "sass": "^1.32.8"
   },
   "scripts": {
+   "dev": "next dev",
+   "build": "next build",
+   "start": "next start"
     "predeploy": "npm run build",
     "start": "node fetch.js && react-scripts start",
     "build": "node fetch.js && react-scripts build",
