--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
    "next": "^14.0.0",
    "react": "^18.2.0",
-   "react-dom": "^18.2.0"
+   "react-dom": "^18.2.0",
     "colorthief": "^2.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -26,7 +26,7 @@
   "scripts": {
    "dev": "next dev",
    "build": "next build",
-   "start": "next start"
+   "start": "next start",
     "predeploy": "npm run build",
     "start": "node fetch.js && react-scripts start",
     "build": "node fetch.js && react-scripts build",
