--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://developerfolio.js.org/",
-  "name": "developerfolio",
+  "name": "olga_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
